Update Ready with Swift 6 banner

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView_development.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView_development.1.html
@@ -82,7 +82,7 @@
                 <a data-action="click->panel-button#click" href="/ready-for-swift-6">
                   <div class="body">
                     <p>
-                      <strong>Are the packages you use safe from data races?</strong> We’re tracking progress towards data race safety this summer. Find out which packages are “Ready for Swift 6” and check for packages marked as “Safe from data races” when browsing the index.
+                      <strong>Are the packages you use safe from data races?</strong> We’re tracking progress towards data race safety with Swift 6. Find out which packages are “Ready for Swift 6” and check for packages marked as “Safe from data races” when browsing the index.
                     </p>
                   </div>
                   <div class="cta">Track Progress &rarr;</div>
