--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_customCollection.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_customCollection.1.html
@@ -315,7 +315,7 @@
                   </div>
                 </li>
                 <li>
-                  <a href="https://swiftpackageindex.com/">Package Homepage</a>
+                  <a href="https://swiftpackageindex.com/" data-turbo="false">Package Homepage</a>
                 </li>
               </ul>
             </section>
