--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_other_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_other_license.1.html
@@ -161,7 +161,10 @@
                   <a href="https://github.com/Alamofire/Alamofire/issues">27 open issues</a> and 
                   <a href="https://github.com/Alamofire/Alamofire/pulls">5 open pull requests</a>. The last issue was closed 5 days ago and the last pull request was merged/closed 6 days ago.
                 </li>
-                <li class="dependencies">This package depends on 2 other packages.</li>
+                <li class="dependencies">
+                  <div>This package depends on 2 other packages.</div>
+                  <small>Including all transitive and test dependencies.</small>
+                </li>
                 <li class="license warning">
                   <a href="https://example.com/license.html">Unknown license</a>
                   <a class="more-info" href="/faq#licenses">Why is this package's license unknown?</a>
