--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_binary_targets.1.html
@@ -165,7 +165,10 @@
                   <a href="https://github.com/Alamofire/Alamofire/issues">27 open issues</a> and 
                   <a href="https://github.com/Alamofire/Alamofire/pulls">5 open pull requests</a>. The last issue was closed 5 days ago and the last pull request was merged/closed 6 days ago.
                 </li>
-                <li class="dependencies">This package depends on 2 other packages.</li>
+                <li class="dependencies">
+                  <div>This package depends on 2 other packages.</div>
+                  <small>Including all transitive and test dependencies.</small>
+                </li>
                 <li class="license"> licensed</li>
                 <li class="stars">17 stars</li>
                 <li class="libraries">3 libraries</li>
