--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_AuthorShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_AuthorShow.1.html
@@ -105,6 +105,9 @@
                 <li class="stars">
                   <small>3 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -121,6 +124,9 @@
                 </li>
                 <li class="stars">
                   <small>3 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -139,6 +145,9 @@
                 <li class="stars">
                   <small>3 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -155,6 +164,9 @@
                 </li>
                 <li class="stars">
                   <small>3 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -173,6 +185,9 @@
                 <li class="stars">
                   <small>3 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -189,6 +204,9 @@
                 </li>
                 <li class="stars">
                   <small>3 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -207,6 +225,9 @@
                 <li class="stars">
                   <small>3 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -223,6 +244,9 @@
                 </li>
                 <li class="stars">
                   <small>3 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -241,6 +265,9 @@
                 <li class="stars">
                   <small>3 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -257,6 +284,9 @@
                 </li>
                 <li class="stars">
                   <small>3 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
