--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_KeywordShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_KeywordShow.1.html
@@ -98,6 +98,9 @@
                 <li class="stars">
                   <small>4 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -114,6 +117,9 @@
                 </li>
                 <li class="stars">
                   <small>4 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -132,6 +138,9 @@
                 <li class="stars">
                   <small>4 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -148,6 +157,9 @@
                 </li>
                 <li class="stars">
                   <small>4 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -166,6 +178,9 @@
                 <li class="stars">
                   <small>4 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -182,6 +197,9 @@
                 </li>
                 <li class="stars">
                   <small>4 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -200,6 +218,9 @@
                 <li class="stars">
                   <small>4 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -216,6 +237,9 @@
                 </li>
                 <li class="stars">
                   <small>4 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
@@ -234,6 +258,9 @@
                 <li class="stars">
                   <small>4 stars</small>
                 </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
+                </li>
               </ul>
             </a>
           </li>
@@ -250,6 +277,9 @@
                 </li>
                 <li class="stars">
                   <small>4 stars</small>
+                </li>
+                <li class="has-documentation">
+                  <small>Has documentation</small>
                 </li>
               </ul>
             </a>
