Added package collection query limit for keywords

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_KeywordShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_KeywordShow.1.html
@@ -89,6 +89,11 @@
         <form class="copyable-input">
           <input type="text" data-button-name="Copy Package Collection URL" data-event-name="Copy Package Collection URL Button" value="http://localhost:8080/keywords/networking/collection.json" readonly/>
         </form>
+        <p>
+          <h6>
+            <i>Note: Package collections are limited to a maximum of 300 packages. If a keyword has more than 300 packages, only the top 300 packages will be included based on their package score.</i>
+          </h6>
+        </p>
         <hr class="minor"/>
         <ul id="package-list">
           <li>
