--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b.html
@@ -31,7 +31,7 @@
       <li><a href="/owner/package"><span>pkg</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="stable">1.2.3</span></span>
+        <span>Documentation for <span class="stable">1.2.3</span><span class="badge">LATEST</span></span>
         <ul>
          <li><a href="/owner/package/main/documentation/target"><span class="branch">main</span></a></li>
          <li class="current"><a href="/owner/package/1.2.3/documentation/target"><span class="stable">1.2.3</span></a></li>
