--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_tutorials.index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_tutorials.index.html
@@ -28,7 +28,7 @@
       <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/owner"><span>owner</span></a></li>
       <li><a href="/owner/package"><span>pkg</span></a></li>
-      <li><span>Documentation for <span class="stable">1.0.0</span></span></li>
+      <li><span>Documentation for <span class="stable">1.0.0</span><span class="badge">LATEST</span></span></li>
      </ul>
     </nav>
    </div>
