--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.ref-index-path.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.ref-index-path.html
@@ -29,7 +29,10 @@
       <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/owner"><span>owner</span></a></li>
       <li><a href="/owner/package"><span>pkg</span></a></li>
-      <li><span>Documentation for <span class="branch">feature-1.2.3</span></span></li>
+      <li><span>Documentation for 
+        <div class="reference">
+         <span class="branch">feature-1.2.3</span>
+        </div></span></li>
      </ul>
     </nav>
    </div>
