--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_issue_2288.index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_issue_2288.index.html
@@ -30,7 +30,10 @@
       <li><a href="/foo/bar"><span>bar</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="branch">main</span></span>
+        <span>Documentation for 
+         <div class="reference">
+          <span class="branch">main</span>
+         </div></span>
         <ul>
          <li class="current"><a href="/foo/bar/main/documentation/target"><span class="branch">main</span></a></li>
         </ul>
