--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
@@ -22,7 +22,10 @@
       <li><a href="/owner/package"><span>Package Name</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="stable">main</span></span>
+        <span>Documentation for 
+         <div class="reference">
+          <span class="stable">main</span>
+         </div></span>
         <ul>
          <li class="current"><a href="/owner/package/main/documentation/archive1"><span class="branch">main</span></a></li>
         </ul>
