--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleVersions.1.html
@@ -23,7 +23,10 @@
       <li><a href="/owner/package"><span>Package Name</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="branch">main</span></span>
+        <span>Documentation for 
+         <div class="reference">
+          <span class="branch">main</span>
+         </div></span>
         <ul>
          <li class="current"><a href="/owner/package/main/documentation/archive1"><span class="branch">main</span></a></li>
          <li><a href="/owner/package/1.0.0-beta1/documentation/archive1"><span class="beta">1.0.0-beta1</span></a></li>
