--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_outdatedStableVersion.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_outdatedStableVersion.1.html
@@ -23,7 +23,10 @@
       <li><a href="/owner/package"><span>Package Name</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="stable">1.1.0</span></span>
+        <span>Documentation for 
+         <div class="reference">
+          <span class="stable">1.1.0</span>
+         </div></span>
         <ul>
          <li><a href="/owner/package/main/documentation/archive1"><span class="branch">main</span></a></li>
          <li><a href="/owner/package/2.0.0/documentation/archive1"><span class="beta">2.0.0</span></a></li>
