--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.current-index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.current-index.html
@@ -30,7 +30,10 @@
       <li><a href="/owner/package"><span>pkg</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="branch">feature/1.2.3</span></span>
+        <span>Documentation for 
+         <div class="reference">
+          <span class="branch">feature/1.2.3</span>
+         </div></span>
         <ul>
          <li class="current"><a href="/owner/package/feature-1.2.3/documentation/target"><span class="branch">feature/1.2.3</span></a></li>
         </ul>
