--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_current_rewrite.index-mixed-case.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_current_rewrite.index-mixed-case.html
@@ -30,7 +30,11 @@
       <li><a href="/Owner/Package"><span>pkg</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="stable">1.0.0</span><span class="badge">LATEST</span></span>
+        <span>Documentation for 
+         <div class="reference">
+          <span class="stable">1.0.0</span>
+          <span class="badge">LATEST</span>
+         </div></span>
         <ul>
          <li><a href="/Owner/Package/main/documentation/target"><span class="branch">main</span></a></li>
          <li class="current"><a href="/Owner/Package/1.0.0/documentation/target"><span class="stable">1.0.0</span></a></li>
