--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BlogActions_Show_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BlogActions_Show_document.1.html
@@ -102,16 +102,22 @@
               <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server">GitHub</a>
             </li>
             <li>
-              <a href="/privacy">Privacy and Cookies</a>
+              <a href="/privacy">Privacy</a>
             </li>
             <li>
-              <a href="https://swiftpackageindex.statuspage.io">Uptime and System Status</a>
+              <a href="https://swiftpackageindex.statuspage.io">System Status</a>
             </li>
             <li>
               <a href="/build-monitor">Build System Monitor</a>
             </li>
             <li>
               <a href="https://mas.to/@SwiftPackageIndex">Mastodon</a>
+            </li>
+            <li>
+              <a href="https://swiftpackageindexing.transistor.fm">Podcast</a>
+            </li>
+            <li>
+              <a href="/ready-for-swift-6">Ready for Swift 6</a>
             </li>
           </ul>
           <small>The Swift Package Index is entirely funded by community sponsorship. Thank you to 
