--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/DocCTemplate_processedPage_multipleVersions.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/DocCTemplate_processedPage_multipleVersions.1.html
@@ -59,9 +59,12 @@
      <ul>
       <li><a href="/blog">Blog</a></li>
       <li><a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server">GitHub</a></li>
-      <li><a href="/privacy">Privacy and Cookies</a></li>
-      <li><a href="https://swiftpackageindex.statuspage.io">Uptime and System Status</a></li>
+      <li><a href="/privacy">Privacy</a></li>
+      <li><a href="https://swiftpackageindex.statuspage.io">System Status</a></li>
+      <li><a href="/build-monitor">Build System Monitor</a></li>
       <li><a href="https://mas.to/@SwiftPackageIndex">Mastodon</a></li>
+      <li><a href="https://swiftpackageindexing.transistor.fm">Podcast</a></li>
+      <li><a href="/ready-for-swift-6">Ready for Swift 6</a></li>
      </ul>
     </nav>
     <small>The Swift Package Index is entirely funded by sponsorship. Thank you to <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.</small>
