--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/HomeIndex_document_development.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/HomeIndex_document_development.1.html
@@ -78,14 +78,10 @@
         <section class="two-column">
           <section>
             <section>
-              <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Ready for Swift 6 CTA" class="panel-button rfs6">
-                <a data-action="click->panel-button#click" href="/ready-for-swift-6">
-                  <div class="body">
-                    <p>
-                      <strong>Are the packages you use safe from data races?</strong> We’re tracking progress towards data race safety with Swift 6. Find out which packages are “Ready for Swift 6” and check for packages marked as “Safe from data races” when browsing the index.
-                    </p>
-                  </div>
-                  <div class="cta">Track Progress &rarr;</div>
+              <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Podcast CTA" class="panel-button podcast">
+                <a data-action="click->panel-button#click" href="https://swiftpackageindexing.transistor.fm">
+                  <div class="body">Join Dave and Sven for a chat about ongoing Swift Package Index development and package recommendations from the community on the Swift Package Indexing podcast.</div>
+                  <div class="cta">Listen Now &rarr;</div>
                 </a>
               </div>
             </section>
@@ -224,16 +220,22 @@
               <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server">GitHub</a>
             </li>
             <li>
-              <a href="/privacy">Privacy and Cookies</a>
+              <a href="/privacy">Privacy</a>
             </li>
             <li>
-              <a href="https://swiftpackageindex.statuspage.io">Uptime and System Status</a>
+              <a href="https://swiftpackageindex.statuspage.io">System Status</a>
             </li>
             <li>
               <a href="/build-monitor">Build System Monitor</a>
             </li>
             <li>
               <a href="https://mas.to/@SwiftPackageIndex">Mastodon</a>
+            </li>
+            <li>
+              <a href="https://swiftpackageindexing.transistor.fm">Podcast</a>
+            </li>
+            <li>
+              <a href="/ready-for-swift-6">Ready for Swift 6</a>
             </li>
           </ul>
           <small>The Swift Package Index is entirely funded by community sponsorship. Thank you to 
