--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/HomeIndex_document_development.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/HomeIndex_document_development.1.html
@@ -54,6 +54,9 @@
             <li>
               <a href="/faq">FAQ</a>
             </li>
+            <li>
+              <a href="/portal">Portal</a>
+            </li>
           </ul>
         </nav>
       </div>
