--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
@@ -104,7 +104,7 @@
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose">raise an issue</a>.
           </p>
           <hr/>
-          <h3>Swift 6.0</h3>
+          <h3>Swift 6.1</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -297,7 +297,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.10</h3>
+          <h3>Swift 6.0</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -493,7 +493,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.9</h3>
+          <h3>Swift 5.10</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -686,7 +686,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.8</h3>
+          <h3>Swift 5.9</h3>
           <ul class="matrix builds">
             <li class="row">
               <div class="row-labels">
@@ -766,6 +766,33 @@
                 </div>
                 <div>
                   <span>Queued</span>
+                </div>
+              </div>
+            </li>
+            <li class="row">
+              <div class="row-labels">
+                <strong>visionOS</strong>
+              </div>
+              <div class="column-labels">
+                <div>
+                  <span class="stable">1.2.3</span>
+                </div>
+                <div>
+                  <span class="branch">main</span>
+                </div>
+                <div>
+                  <span class="beta">2.0.0-b1</span>
+                </div>
+              </div>
+              <div class="results">
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
                 </div>
               </div>
             </li>
