--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
@@ -105,7 +105,7 @@
           </p>
           <hr/>
           <h3>Swift 6.1</h3>
-          <ul class="matrix builds">
+          <ul class="build-results">
             <li class="row">
               <div class="row-labels">
                 <strong>iOS</strong>
@@ -352,7 +352,7 @@
           </ul>
           <hr/>
           <h3>Swift 6.0</h3>
-          <ul class="matrix builds">
+          <ul class="build-results">
             <li class="row">
               <div class="row-labels">
                 <strong>iOS</strong>
@@ -548,7 +548,7 @@
           </ul>
           <hr/>
           <h3>Swift 5.10</h3>
-          <ul class="matrix builds">
+          <ul class="build-results">
             <li class="row">
               <div class="row-labels">
                 <strong>iOS</strong>
@@ -741,7 +741,7 @@
           </ul>
           <hr/>
           <h3>Swift 5.9</h3>
-          <ul class="matrix builds">
+          <ul class="build-results">
             <li class="row">
               <div class="row-labels">
                 <strong>iOS</strong>
