--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_many_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_many_keywords.1.html
@@ -394,30 +394,24 @@
                         <span class="separator">/</span>
                         <span class="branch">main</span>
                       </div>
-                      <div class="results" style="--items-per-row: 4">
-                        <div class="result-label">6.1</div>
-                        <div class="result-label">6.0</div>
-                        <div class="result-label">5.10</div>
-                        <div class="result-label">5.9</div>
-                        <div class="result compatible" title="Built successfully with Swift 6.1"></div>
-                        <div class="result unknown" title="No build information available for Swift 6.0"></div>
-                        <div class="result incompatible" title="Build failed with Swift 5.10"></div>
-                        <div class="result incompatible" title="Build failed with Swift 5.9"></div>
+                      <div class="results">
+                        <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
+                        <div class="result unknown" title="No build information available for Swift 6.0">6.0
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result incompatible" title="Build failed with Swift 5.10">5.10</div>
+                        <div class="result incompatible" title="Build failed with Swift 5.9">5.9</div>
                       </div>
                     </li>
                     <li class="version">
                       <div class="label">
                         <span class="beta">6.0.0-b1</span>
                       </div>
-                      <div class="results" style="--items-per-row: 4">
-                        <div class="result-label">6.1</div>
-                        <div class="result-label">6.0</div>
-                        <div class="result-label">5.10</div>
-                        <div class="result-label">5.9</div>
-                        <div class="result compatible" title="Built successfully with Swift 6.1"></div>
-                        <div class="result compatible" title="Built successfully with Swift 6.0"></div>
-                        <div class="result compatible" title="Built successfully with Swift 5.10"></div>
-                        <div class="result incompatible" title="Build failed with Swift 5.9"></div>
+                      <div class="results">
+                        <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
+                        <div class="result compatible" title="Built successfully with Swift 6.0">6.0</div>
+                        <div class="result compatible" title="Built successfully with Swift 5.10">5.10</div>
+                        <div class="result incompatible" title="Build failed with Swift 5.9">5.9</div>
                       </div>
                     </li>
                   </ul>
@@ -428,69 +422,69 @@
                       <div class="label">
                         <span class="stable">5.2.3</span>
                       </div>
-                      <div class="results" style="--items-per-row: 8">
-                        <div class="result-label">iOS</div>
-                        <div class="result-label">macOS</div>
-                        <div class="result-label">visionOS</div>
-                        <div class="result-label">watchOS</div>
-                        <div class="result-label">tvOS</div>
-                        <div class="result-label">Linux</div>
-                        <div class="result-label">Wasm</div>
-                        <div class="result-label">Android</div>
-                        <div class="result compatible" title="Built successfully with iOS"></div>
-                        <div class="result unknown" title="No build information available for macOS"></div>
-                        <div class="result unknown" title="No build information available for visionOS"></div>
-                        <div class="result unknown" title="No build information available for watchOS"></div>
-                        <div class="result unknown" title="No build information available for tvOS"></div>
-                        <div class="result unknown" title="No build information available for Linux"></div>
-                        <div class="result unknown" title="No build information available for WebAssembly"></div>
-                        <div class="result unknown" title="No build information available for Android"></div>
+                      <div class="results">
+                        <div class="result compatible" title="Built successfully with iOS">iOS</div>
+                        <div class="result unknown" title="No build information available for macOS">macOS
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for visionOS">visionOS
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for watchOS">watchOS
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for tvOS">tvOS
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for Linux">Linux
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for Android">Android
+                          <small>(Pending)</small>
+                        </div>
                       </div>
                     </li>
                     <li class="version">
                       <div class="label">
                         <span class="beta">6.0.0-b1</span>
                       </div>
-                      <div class="results" style="--items-per-row: 8">
-                        <div class="result-label">iOS</div>
-                        <div class="result-label">macOS</div>
-                        <div class="result-label">visionOS</div>
-                        <div class="result-label">watchOS</div>
-                        <div class="result-label">tvOS</div>
-                        <div class="result-label">Linux</div>
-                        <div class="result-label">Wasm</div>
-                        <div class="result-label">Android</div>
-                        <div class="result compatible" title="Built successfully with iOS"></div>
-                        <div class="result compatible" title="Built successfully with macOS"></div>
-                        <div class="result compatible" title="Built successfully with visionOS"></div>
-                        <div class="result unknown" title="No build information available for watchOS"></div>
-                        <div class="result compatible" title="Built successfully with tvOS"></div>
-                        <div class="result compatible" title="Built successfully with Linux"></div>
-                        <div class="result unknown" title="No build information available for WebAssembly"></div>
-                        <div class="result unknown" title="No build information available for Android"></div>
+                      <div class="results">
+                        <div class="result compatible" title="Built successfully with iOS">iOS</div>
+                        <div class="result compatible" title="Built successfully with macOS">macOS</div>
+                        <div class="result compatible" title="Built successfully with visionOS">visionOS</div>
+                        <div class="result unknown" title="No build information available for watchOS">watchOS
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result compatible" title="Built successfully with tvOS">tvOS</div>
+                        <div class="result compatible" title="Built successfully with Linux">Linux</div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for Android">Android
+                          <small>(Pending)</small>
+                        </div>
                       </div>
                     </li>
                     <li class="version">
                       <div class="label">
                         <span class="branch">main</span>
                       </div>
-                      <div class="results" style="--items-per-row: 8">
-                        <div class="result-label">iOS</div>
-                        <div class="result-label">macOS</div>
-                        <div class="result-label">visionOS</div>
-                        <div class="result-label">watchOS</div>
-                        <div class="result-label">tvOS</div>
-                        <div class="result-label">Linux</div>
-                        <div class="result-label">Wasm</div>
-                        <div class="result-label">Android</div>
-                        <div class="result compatible" title="Built successfully with iOS"></div>
-                        <div class="result compatible" title="Built successfully with macOS"></div>
-                        <div class="result compatible" title="Built successfully with visionOS"></div>
-                        <div class="result compatible" title="Built successfully with watchOS"></div>
-                        <div class="result compatible" title="Built successfully with tvOS"></div>
-                        <div class="result compatible" title="Built successfully with Linux"></div>
-                        <div class="result unknown" title="No build information available for WebAssembly"></div>
-                        <div class="result unknown" title="No build information available for Android"></div>
+                      <div class="results">
+                        <div class="result compatible" title="Built successfully with iOS">iOS</div>
+                        <div class="result compatible" title="Built successfully with macOS">macOS</div>
+                        <div class="result compatible" title="Built successfully with visionOS">visionOS</div>
+                        <div class="result compatible" title="Built successfully with watchOS">watchOS</div>
+                        <div class="result compatible" title="Built successfully with tvOS">tvOS</div>
+                        <div class="result compatible" title="Built successfully with Linux">Linux</div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
+                          <small>(Pending)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for Android">Android
+                          <small>(Pending)</small>
+                        </div>
                       </div>
                     </li>
                   </ul>
