--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_many_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_many_keywords.1.html
@@ -396,9 +396,7 @@
                       </div>
                       <div class="results">
                         <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
-                        <div class="result unknown" title="No build information available for Swift 6.0">6.0
-                          <small>(Pending)</small>
-                        </div>
+                        <div class="result unknown" title="No build information available for Swift 6.0">6.0</div>
                         <div class="result incompatible" title="Build failed with Swift 5.10">5.10</div>
                         <div class="result incompatible" title="Build failed with Swift 5.9">5.9</div>
                       </div>
@@ -424,27 +422,13 @@
                       </div>
                       <div class="results">
                         <div class="result compatible" title="Built successfully with iOS">iOS</div>
-                        <div class="result unknown" title="No build information available for macOS">macOS
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for visionOS">visionOS
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for watchOS">watchOS
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for tvOS">tvOS
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for Linux">Linux
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for Android">Android
-                          <small>(Pending)</small>
-                        </div>
+                        <div class="result unknown" title="No build information available for macOS">macOS</div>
+                        <div class="result unknown" title="No build information available for visionOS">visionOS</div>
+                        <div class="result unknown" title="No build information available for watchOS">watchOS</div>
+                        <div class="result unknown" title="No build information available for tvOS">tvOS</div>
+                        <div class="result unknown" title="No build information available for Linux">Linux</div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm</div>
+                        <div class="result unknown" title="No build information available for Android">Android</div>
                       </div>
                     </li>
                     <li class="version">
@@ -455,17 +439,11 @@
                         <div class="result compatible" title="Built successfully with iOS">iOS</div>
                         <div class="result compatible" title="Built successfully with macOS">macOS</div>
                         <div class="result compatible" title="Built successfully with visionOS">visionOS</div>
-                        <div class="result unknown" title="No build information available for watchOS">watchOS
-                          <small>(Pending)</small>
-                        </div>
+                        <div class="result unknown" title="No build information available for watchOS">watchOS</div>
                         <div class="result compatible" title="Built successfully with tvOS">tvOS</div>
                         <div class="result compatible" title="Built successfully with Linux">Linux</div>
-                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for Android">Android
-                          <small>(Pending)</small>
-                        </div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm</div>
+                        <div class="result unknown" title="No build information available for Android">Android</div>
                       </div>
                     </li>
                     <li class="version">
@@ -479,12 +457,8 @@
                         <div class="result compatible" title="Built successfully with watchOS">watchOS</div>
                         <div class="result compatible" title="Built successfully with tvOS">tvOS</div>
                         <div class="result compatible" title="Built successfully with Linux">Linux</div>
-                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for Android">Android
-                          <small>(Pending)</small>
-                        </div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm</div>
+                        <div class="result unknown" title="No build information available for Android">Android</div>
                       </div>
                     </li>
                   </ul>
