--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_single_row_tables.1.html
@@ -216,12 +216,8 @@
                         <div class="result compatible" title="Built successfully with watchOS">watchOS</div>
                         <div class="result compatible" title="Built successfully with tvOS">tvOS</div>
                         <div class="result compatible" title="Built successfully with Linux">Linux</div>
-                        <div class="result unknown" title="No build information available for WebAssembly">Wasm
-                          <small>(Pending)</small>
-                        </div>
-                        <div class="result unknown" title="No build information available for Android">Android
-                          <small>(Pending)</small>
-                        </div>
+                        <div class="result unknown" title="No build information available for WebAssembly">Wasm</div>
+                        <div class="result unknown" title="No build information available for Android">Android</div>
                       </div>
                     </li>
                   </ul>
