--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/MissingPackage_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/MissingPackage_document.1.html
@@ -63,8 +63,8 @@
         </nav>
       </div>
     </header>
-    <p class="announcement">Track the adoption of Swift 6 strict concurrency checks for data race safety. How many packages are 
-      <a href="/ready-for-swift-6">Ready for Swift 6</a>?
+    <p class="announcement">Has it really been five years since Swift Package Index launched? Read our 
+      <a href="/blog/five-years-of-the-swift-package-index">anniversary blog post</a>!
     </p>
     <main>
       <div class="inner">
