Fully adopt SwiftVersion.v6_2, including triggering

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
@@ -104,7 +104,7 @@
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose">raise an issue</a>.
           </p>
           <hr/>
-          <h3>Swift 6.1</h3>
+          <h3>Swift 6.2 (beta)</h3>
           <ul class="build-results">
             <li class="row">
               <div class="row-labels">
@@ -351,7 +351,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 6.0</h3>
+          <h3>Swift 6.1</h3>
           <ul class="build-results">
             <li class="row">
               <div class="row-labels">
@@ -545,9 +545,63 @@
                 </div>
               </div>
             </li>
+            <li class="row">
+              <div class="row-labels">
+                <strong>Wasm</strong>
+              </div>
+              <div class="column-labels">
+                <div>
+                  <span class="stable">1.2.3</span>
+                </div>
+                <div>
+                  <span class="branch">main</span>
+                </div>
+                <div>
+                  <span class="beta">2.0.0-b1</span>
+                </div>
+              </div>
+              <div class="results">
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+              </div>
+            </li>
+            <li class="row">
+              <div class="row-labels">
+                <strong>Android</strong>
+              </div>
+              <div class="column-labels">
+                <div>
+                  <span class="stable">1.2.3</span>
+                </div>
+                <div>
+                  <span class="branch">main</span>
+                </div>
+                <div>
+                  <span class="beta">2.0.0-b1</span>
+                </div>
+              </div>
+              <div class="results">
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+              </div>
+            </li>
           </ul>
           <hr/>
-          <h3>Swift 5.10</h3>
+          <h3>Swift 6.0</h3>
           <ul class="build-results">
             <li class="row">
               <div class="row-labels">
@@ -740,7 +794,7 @@
             </li>
           </ul>
           <hr/>
-          <h3>Swift 5.9</h3>
+          <h3>Swift 5.10</h3>
           <ul class="build-results">
             <li class="row">
               <div class="row-labels">
