--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_few_keywords.1.html
@@ -220,10 +220,12 @@
                         <span class="branch">main</span>
                       </div>
                       <div class="results">
-                        <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
-                        <div class="result unknown" title="No build information available for Swift 6.0">6.0</div>
+                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2
+                          <small>(beta)</small>
+                        </div>
+                        <div class="result unknown" title="No build information available for Swift 6.1">6.1</div>
+                        <div class="result incompatible" title="Build failed with Swift 6.0">6.0</div>
                         <div class="result incompatible" title="Build failed with Swift 5.10">5.10</div>
-                        <div class="result incompatible" title="Build failed with Swift 5.9">5.9</div>
                       </div>
                     </li>
                     <li class="version">
@@ -231,10 +233,12 @@
                         <span class="longest beta">6.0.0-b1</span>
                       </div>
                       <div class="results">
+                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2
+                          <small>(beta)</small>
+                        </div>
                         <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
                         <div class="result compatible" title="Built successfully with Swift 6.0">6.0</div>
-                        <div class="result compatible" title="Built successfully with Swift 5.10">5.10</div>
-                        <div class="result incompatible" title="Build failed with Swift 5.9">5.9</div>
+                        <div class="result incompatible" title="Build failed with Swift 5.10">5.10</div>
                       </div>
                     </li>
                   </ul>
