--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_open_source_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_open_source_license.1.html
@@ -191,9 +191,7 @@
                         <span class="branch">main</span>
                       </div>
                       <div class="results">
-                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2
-                          <small>(beta)</small>
-                        </div>
+                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2</div>
                         <div class="result unknown" title="No build information available for Swift 6.1">6.1</div>
                         <div class="result incompatible" title="Build failed with Swift 6.0">6.0</div>
                         <div class="result incompatible" title="Build failed with Swift 5.10">5.10</div>
@@ -204,9 +202,7 @@
                         <span class="longest beta">6.0.0-b1</span>
                       </div>
                       <div class="results">
-                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2
-                          <small>(beta)</small>
-                        </div>
+                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2</div>
                         <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
                         <div class="result compatible" title="Built successfully with Swift 6.0">6.0</div>
                         <div class="result incompatible" title="Build failed with Swift 5.10">5.10</div>
