--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_single_row_tables.1.html
@@ -191,9 +191,7 @@
                         <span class="branch">main</span>
                       </div>
                       <div class="results">
-                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2
-                          <small>(beta)</small>
-                        </div>
+                        <div class="result compatible" title="Built successfully with Swift 6.2">6.2</div>
                         <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
                         <div class="result compatible" title="Built successfully with Swift 6.0">6.0</div>
                         <div class="result compatible" title="Built successfully with Swift 5.10">5.10</div>
