--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
@@ -104,7 +104,7 @@
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose">raise an issue</a>.
           </p>
           <hr/>
-          <h3>Swift 6.2 (beta)</h3>
+          <h3>Swift 6.2</h3>
           <ul class="build-results">
             <li class="row">
               <div class="row-labels">
