Removed custom keyboard navigation in package lists.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/SearchShow_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/SearchShow_document.1.html
@@ -94,7 +94,7 @@
           <div class="two-column mobile-reversed">
             <section class="package-results">
               <h4>Matching packages</h4>
-              <ul id="package-list" data-focus-query-field="true">
+              <ul id="package-list">
                 <li>
                   <a href="https://example.com/package/one">
                     <h4>Package One</h4>
