--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/SearchShow_document_withFilters.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/SearchShow_document_withFilters.1.html
@@ -101,7 +101,7 @@
                   <span class="filter-value">mit</span>
                 </li>
               </ul>
-              <ul id="package-list" data-focus-query-field="true">
+              <ul id="package-list">
                 <li>
                   <a href="https://example.com/package/one">
                     <h4>Package One</h4>
