--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/SearchShow_document_withXSSAttempt.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/SearchShow_document_withXSSAttempt.1.html
@@ -94,7 +94,7 @@
           <section class="package-results">
             <h4>Matching packages</h4>
             <p>No packages found.</p>
-            <ul id="package-list" data-focus-query-field="true"></ul>
+            <ul id="package-list"></ul>
             <ul class="pagination">
               <li class="previous">
                 <a href="/search?query=&apos;&gt;&quot;&gt;&lt;/script&gt;&lt;svg/onload=confirm(&apos;XSS&apos;)&gt;&page=2">Previous Page</a>
