--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BlogActions_Show_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BlogActions_Show_document.1.html
@@ -29,7 +29,7 @@
       <div class="inner">
         <a href="/">
           <h1>
-            <img alt="The Swift Package Index logo." src="/images/logo.svg"/>Swift Package Index
+            <img alt="The Swift Package Index logo." width="64" height="64" src="/images/logo.svg"/>Swift Package Index
           </h1>
         </a>
         <nav>
