--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BlogActions_Index_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BlogActions_Index_document.1.html
@@ -32,7 +32,7 @@ latest features, our efforts in the community, and any other updates that affect
       <div class="inner">
         <a href="/">
           <h1>
-            <img alt="The Swift Package Index logo." src="/images/logo.svg"/>Swift Package Index
+            <img alt="The Swift Package Index logo." width="64" height="64" src="/images/logo.svg"/>Swift Package Index
           </h1>
         </a>
         <nav>
